Arreglando unas pequeñas cosasa

--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -21,7 +21,7 @@
     
         <!-- Check para habilitar las caracteres en mayusculas -->
         <div class="form-check form-switch my-2">
-            <label class="form-check-label" for="uppercase">Mayusculas</label>
+            <label class="form-check-label" for="uppercase">Mayúsculas</label>
             <input class="form-check-input" type="checkbox" name="uppercase" id="uppercase">
         </div>
     
@@ -33,11 +33,11 @@
     
         <!-- Check para habilitar los numeros -->
         <div class="form-check form-switch my-2">
-            <label class="form-check-label" for="numbers">Numeros</label>
+            <label class="form-check-label" for="numbers">Números</label>
             <input class="form-check-input" type="checkbox" name="numbers" id="numbers">
         </div>
     
-        <button class="btn btn-primary">Generate password</button>
+        <button class="btn btn-primary">Generar</button>
     </form>
 </div>
 {% endblock %}
